# Spark_junonns

./: RUST_IMPLEMENTATION_SUMMARY.md  build-rust-auth.sh
java-interface/src/main/java/org/jivesoftware/spark/openfire/: OpenFireAuthClient.java  OpenFireAuthExample.java  OpenFireAuthNative.java
rust-openfire-auth/: Cargo.toml  README.md
rust-openfire-auth/src/: auth.rs  communication.rs  config.rs  error.rs  jni_interface.rs  lib.rs
