[package]
name = "openfire_auth"
version = "0.1.0"
edition = "2021"
description = "OpenFire authentication and communication module in Rust"
authors = ["Spark Development Team"]

[lib]
name = "openfire_auth"
crate-type = ["cdylib", "lib"]

[dependencies]
# XMPP client library
xmpp = "0.5"
tokio = { version = "1.0", features = ["full"] }
tokio-xmpp = "3.0"

# Async runtime and utilities
async-std = "1.12"
futures = "0.3"

# Authentication and cryptography
ring = "0.17"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# JNI for Java integration
jni = "0.21"

# TLS support
rustls = "0.22"
rustls-native-certs = "0.7"

# Network utilities
url = "2.4"

# Static initialization
lazy_static = "1.4"
